--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"nodemon": "^2.0.4"
 	},
 	"dependencies": {
+		"bcryptjs": "^2.4.3",
 		"connect-mongo": "^3.2.0",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
@@ -23,6 +24,7 @@
 		"moment": "^2.27.0",
 		"mongoose": "^5.9.24",
 		"morgan": "^1.10.0",
-		"passport": "^0.4.1"
+		"passport": "^0.4.1",
+		"passport-local": "^1.0.0"
 	}
 }
